# base-project

./: CMakeLists.txt  runbuild
.circleci/: config.yml
cmake/: UnitTest.cmake
mck/: CMakeLists.txt
mck/dir/: CMakeLists.txt  fileMock.cpp  fileMock.h
src/: CMakeLists.txt
src/dir/: CMakeLists.txt  file.cpp  file.h
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/dir/: CMakeLists.txt  fileTest.cpp
